create company; add createTemplate boolean to CompanyRole